fix top gallery on tablet

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -208,7 +208,7 @@ Projects - Top
 @media only screen and (max-width: 800px) { .top .content { padding: 0; } }
 .top h1 { text-align: center; }
 .top ul.gallery { list-style: none; padding: 0; margin: 0; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; text-align: center; height: 100%; }
-@media only screen and (max-width: 800px) { .top ul.gallery { display: block; } }
+@media only screen and (max-width: 699px) { .top ul.gallery { display: block; } }
 .top ul.gallery li { width: 25%; -webkit-box-flex: 0; -webkit-flex: 0 1 25%; -ms-flex: 0 1 25%; flex: 0 1 25%; height: 200px; }
 @media only screen and (max-width: 699px) { .top ul.gallery li { width: 100%; -webkit-box-flex: 0; -webkit-flex: 0 1 100%; -ms-flex: 0 1 100%; flex: 0 1 100%; height: 50px; margin-bottom: 5px; } }
 .top ul.gallery li:not(:last-child) { margin-right: 20px; }
